@@ -1,5 +1,7 @@
 package org.obm.push.backend;
 
+import java.util.List;
+
 import org.obm.push.provisioning.Policy;
 
 public interface IBackend {
@@ -15,5 +17,7 @@ public interface IBackend {
 	String getWasteBasket();
 	
 	Policy getDevicePolicy(BackendSession bs);
+
+	List<ItemChange> waitForChanges(BackendSession bs);
 	
 }
